# google-reviews-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  credentials.example.json  pyproject.toml
.github/workflows/: coverage-report.yml  lint-and-test.yml  publish.yml
.planning/flask-demo/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/flask-demo/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/flask-demo/phases/02-auth-and-landing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/flask-demo/phases/03-data-browsing/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md
flask-example/: .env.example  api.py  app.py  auth.py  cookies.py  pyproject.toml  views.py
flask-example/.planning/flask-demo/: ROADMAP.md  STATE.md
flask-example/.planning/flask-demo/phases/04-polish/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md
flask-example/templates/: _breadcrumb.html  _error.html  account.html  accounts.html  base.html  callback_success.html  index.html  location.html  reviews.html
flask-example/tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_ci_canary.py  test_cookies.py  test_views.py
src/google_business_reviews/: __init__.py  client.py  constants.py  demo.py  exceptions.py
src/google_business_reviews/http_client/: base_client.py  httpx_client.py
src/google_reviews_client/: __init__.py  client.py  constants.py  demo.py  exceptions.py  models.py
src/google_reviews_client/cli/: __init__.py  auth.py  config.py  logger.py
src/google_reviews_client/http_client/: __init__.py  base_client.py  httpx_client.py
tests/: conftest.py  test_build.py  test_cli.py  test_cli_auth.py  test_cli_auth_extended.py  test_cli_config.py  test_cli_coverage.py  test_cli_helpers.py  test_cli_logger.py  test_cli_main.py  test_client.py  test_demo.py  test_exceptions.py  test_httpx_client.py  test_models.py  test_regression.py  test_version.py
