[project]
name = "google-reviews-client"
version = "0.2.0"
description = "A lightweight Python client for Google Business Profile reviews and locations (non-official)"
authors = [{ name = "Cauê Thenório", email = "caue@thenorio.com.br" }]
readme = "README.md"
keywords = ["google", "business profile", "google my business", "reviews", "ratings", "locations", "gbp", "maps"]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.24.0",
    "google-auth>=2.0",
]

[project.scripts]
google-reviews-client = "google_reviews_client.cli:main"

[project.optional-dependencies]
cli = [
    "click>=8.3.1",
    "google-auth-oauthlib>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/cauethenorio/google-reviews-client"
Repository = "https://github.com/cauethenorio/google-reviews-client"
Changelog = "https://github.com/cauethenorio/google-reviews-client/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "tox-uv>=1.11.3",
    "ty>=0.0.1a16",
    "coverage[toml]>=6.5",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "click>=8.3.1",
    "google-auth-oauthlib>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = [
    "client_secret*.json",
    "*_client_secret*.json",
    "google-reviews-config.*.json",
    "reviews-*.jsonl",
]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
            "A",
            "ARG",
            "B",
            "B9",
            "C",
            "C4",
            "D", # pydocstyle (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
            "DTZ",
            "E", # pycodestyle errors (https://docs.astral.sh/ruff/rules/#error-e)
            "EM",
            "F", # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
            "FBT",
            "G",
            "I", # isort (https://docs.astral.sh/ruff/rules/#isort-i)
            "ICN",
            "N", # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
            "PIE",
            "PLC",
            "PLE",
            "PLR",
            "PLW",
            "PTH",
            "Q",
            "RET",
            "RUF",
            "S", # flake8-bandit (https://docs.astral.sh/ruff/rules/#flake8-bandit-s)
            "SIM",
            "T",
            "T10",
            "T20",
            "TID",
            "TRY",
            "UP", # pyupgrade (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
            "W", # pycodestyle warnings (https://docs.astral.sh/ruff/rules/#warning-w)
            "YTT" # flake8-2020 (https://docs.astral.sh/ruff/rules/#flake8-2020-ytt)
        ]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
    known-first-party = ["google_reviews_client"]

[tool.ruff.lint.flake8-tidy-imports]
    ban-relative-imports = "parents"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "PLR2004", "PLR0913", "FBT002", "PLC0415", "ARG001", "RUF059", "S603", "S607", "TRY003", "EM102", "D"]
"src/google_reviews_client/cli/__init__.py" = ["C901", "PLR0912", "PLR0915", "PLC0415", "E402", "T201"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
parallel = true

[tool.uv.workspace]
members = []
